--- a/index.html
+++ b/index.html
@@ -29,26 +29,30 @@
 <!-- Add your site or application content here -->
 <header>
     <div class="wrapper">
-    <ul>
-        <li><img src="img/homeLogo.png" alt="Home"></li>
-        <li>Getting Started</li>
-        <li>Documentation</li>
-        <li>Team + Contact</li>
-        <li><img src="img/OSSLogo.png" alt="PayPal Open Source"></li>
-    </ul>
+        <ul>
+            <li class="kraken"><a href="#" title="Home">
+                <div class="hex2">
+                    <div>⬢</div>
+                    <div>K</div>
+                </div>
+            </a></li>
+            <li>Getting Started</li>
+            <li>Documentation</li>
+            <li>Team + Contact</li>
+            <li><img src="img/OSSLogo.png" alt="PayPal Open Source"></li>
+        </ul>
     </div>
 </header>
 <div id="MainBlock">
     <div class="wrapper">
 
         <div id="Intro">
-            <div id="MainLogo">
-                <img src="img/KrakenLogoLarge.png" alt="Kraken Logo">
-            </div>
+            <div id="MainLogo"></div>
             <img src="img/TextLogo@High.png" alt="KrakenJS" height="65">
+
             <h1>
-                Kraken is PayPal's super awesome NodeJS application framework. It will slow or reverse male pattern baldness.
-                It will also cure cancer and end world hunger.
+                The Kraken Suite is an enterprise-grade web application framework for NodeJS.
+                It will allow you to build secure, scalable, and easy to maintain applications in record time!
             </h1>
             <br>
             <a class="download" href="http://github.com/PayPal/kraken-js">
@@ -63,42 +67,170 @@
     </div>
     <div id="Rocks">
         &nbsp;
-    <div class="bottom">&nbsp;</div>
+        <div class="bottom">&nbsp;</div>
     </div>
     <div id="Tentacle">&nbsp;</div>
 </div>
 
 <div id="InfoBlock">
     <div class="wrapper">
-        <h1>Release The Kraken</h1>
+        <h1>The Kraken Suite</h1>
 
-        <p>These are the kraken modules</p>
+        <p>
+            KrakenJS is the main pillar of the framework, but it works in concert with the following modules to provide
+            a robust base for your applications.
+            Each of these modules can also be used independently according to your project needs.
+        </p>
         <ul id="modules">
-            <li>
-                <img src="img/makara.png" alt="makara">
+            <li class="lusca">
+                <img src="img/Lusca.png" alt="Lusca">
 
-                <h1>ModuleName</h1>
+                <h3>Lusca</h3>
 
-                <p>MOdule Description</p>
-                <a href="#">View on GitHub</a>
+                <p>Application security</p>
+                <a href="#">View on GitHub</a><br>
+                <a href="#">Documentation</a>
+            </li>
+            <li class="makara">
+                <img src="img/Makara.png" alt="makara">
+
+                <h3>Makara</h3>
+
+                <p>Internationalization</p>
+                <a href="#">View on GitHub</a><br>
+                <a href="#">Documentation</a>
+            </li>
+            <li class="adaro">
+                <img src="img/Adaro.png" alt="Adaro">
+
+                <h3>Adaro</h3>
+
+                <p>Dust-js Support</p>
+                <a href="#">View on GitHub</a><br>
+                <a href="#">Documentation</a>
+            </li>
+            <li class="kappa">
+                <img src="img/Kappa.png" alt="Kappa">
+
+                <h3>Kappa</h3>
+
+                <p>NPM Proxy</p>
+                <a href="#">View on GitHub</a><br>
                 <a href="#">Documentation</a>
             </li>
         </ul>
     </div>
-    <hr>
-    <div>
+
+    <div class="wrapper">
+        <hr>
+
         <div>
-            <ul>
-                <li><a href="#"><img src="img/small.png" alt="Haboob">Kappa</a></li>
-                <li><a href="#"><img src="img/small.png" alt="Haboob">Kappa</a></li>
-                <li><a href="#"><img src="img/small.png" alt="Haboob">Kappa</a></li>
-                <li><a href="#"><img src="img/small.png" alt="Haboob">Kappa</a></li>
-                <li><a href="#"><img src="img/small.png" alt="Haboob">Kappa</a></li>
-            </ul>
-        </div>
-        <div>
-            Another description block
-        </div>
+                <h1>Supporting Cast</h1>
+                <p>These are additional dependencies, tools and utilities for the Kraken Suite</p>
+                <br>
+                <ul  id="cast">
+
+                    <li class="generator">
+                        <a href="#">
+                            <div class="hex2">
+                                <div>⬢</div>
+                                <div>G</div>
+                            </div>
+                            <div>Generator</div>
+                        </a>
+                        <div class="info">
+                            <h4>Generator</h4>
+                            <p>
+                                A Yeoman Generator that will allow you to quickly set up Kraken projects
+                            </p>
+                        </div>
+                    </li>
+                    <li class="shortstop">
+                        <a href="#">
+                            <div class="hex2">
+                                <div>⬢</div>
+                                <div>S</div>
+                            </div>
+                            <div>Shortstop</div>
+                        </a>
+                        <div class="info">
+                            <h4>Shortstop</h4>
+                            <p>
+                                Sometimes JSON just isn't enough for configuration needs.
+                                Shortstop enables the use of protocols and handlers to enable
+                                identification and special handling of json values.
+                            </p>
+                        </div>
+                    </li>
+                    <li class="findatag">
+                        <a href="#">
+                            <div class="hex2">
+                                <div>⬢</div>
+                                <div>F</div>
+                            </div>
+                            <div>FindATag</div>
+                        </a>
+                        <div class="info">
+                            <strong>FindATag</strong>
+                            <p>
+                                A string tokenizer, that looks for a specific pattern:
+                                <pre>{@[A-Za-z._] [attrs...]/}.</pre>
+
+                            </p>
+                        </div>
+                    </li>
+                    <li class="spud">
+                        <a href="#">
+                            <div class="hex2">
+                                <div>⬢</div>
+                                <div>S</div>
+                            </div>
+                            <div>Spud</div>
+
+                        </a>
+                        <div class="info">
+                            <strong>Spud</strong>
+                            <p>
+                                A content bundle transcoder. It will convert to and from different formats, including .properties, .json, etc
+                            </p>
+                        </div>
+                    </li>
+                    <li class="enrouten">
+                        <a href="#">
+                            <div class="hex2">
+                                <div>⬢</div>
+                                <div>E</div>
+                            </div>
+                            <div>Enrouten</div>
+
+                        </a>
+                        <div class="info">
+                            <strong>Enrouten</strong>
+                            <p>
+                                Route configuration middleware for expressjs. This module changes where/how express loads its routing, making for more organized applications.
+                            </p>
+                        </div>
+                    </li>
+
+                    <li class="webtools">
+                        <a href="#">
+                            <div class="hex2">
+                                <div>⬢</div>
+                                <div>W</div>
+                            </div>
+                            <div>WebTools</div>
+
+                        </a>
+                        <div class="info">
+                            <strong>WebTools</strong>
+                            <p>
+                                A collection of Development-time tools for Kraken applications.
+                            </p>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
     </div>
 </div>
 <div>
